--- a/mypro/static/html/timetable.html
+++ b/mypro/static/html/timetable.html
@@ -1,84 +1,93 @@
-<!DOCTYPE html>
-<html>
-    <head>
-       <title>
-           Time Table
-       </title>
-    </head>
-    <body>
-         <h1>Time Table</h1>
-         <table border="5px" align="left">
-
-             
-
-             <tr bgcolor="yellow">
-                 <td >
-                     Day/time
-                 </td>
-
-                 <td>
-                     Monday
-                 </td>
-
-                 <td>
-                     Tuesday
-                 </td>
-                 <td>
-
-                     Wednesday
-                 </td>
-                 <td>
-                     Thursday
-                 </td>
-                 <td>
-                     Friday
-                 </td>
-             </tr>
-             <tr>
-                 <td bgcolor="yellow">
-                     8-10
-                 </td>
-                  <td colspan="3" bgcolor="cyan" align="center">FREE Slot</td>
-                 <td colspan="1" bgcolor="cyan" align="center">WEB</td>
-               	<td colspan="1" bgcolor="cyan" align="center">CN</td>
-             </tr>
-             <tr>
-                 <td bgcolor="yellow">
-                    10-12
-                 </td>
-                 	<td colspan="1" bgcolor="cyan" align="center">MATHS</td>
-                 <td colspan="1" bgcolor="cyan" align="center">T.ENG</td>
-                 	<td colspan="1" bgcolor="cyan" align="center">CA</td>
-                 <td colspan="1" bgcolor="cyan" align="center">PY</td>
-                 	<td colspan="1" bgcolor="cyan" align="center">FRENCH</td>
-             </tr>
-             <tr>
-                 <td bgcolor="yellow">
-                     12-1
-                 </td>
-			
-                 <td colspan="5" bgcolor="cyan" align="center">LUNCH</td>
-             </tr>
-             <tr>
-                 <td bgcolor="yellow">
-                     1-3
-                 </td>
-			
-                 <td colspan="2" bgcolor="cyan" align="center">FREE SLOT</td>
-                 	<td colspan="1" bgcolor="cyan" align="center">CA</td>
-                 <td colspan="1" bgcolor="cyan" align="center">CN</td>
-                 	<td colspan="1" bgcolor="cyan" align="center">SS</td>
-             </tr>
-             <tr>
-                 <td bgcolor="yellow">
-                    3-5
-                 </td>
-                <td colspan="2" bgcolor="cyan" align="center">FREE SLOT</td>
-                 <td colspan="1" bgcolor="cyan" align="center">T.ENG</td>
-                <td colspan="1" bgcolor="cyan" align="center">CN</td>
-                 <td colspan="1" bgcolor="cyan" align="center">PY</td>
-             </tr>
-         </table>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Slot Timetable</title>
+</head>
+<body>
+<center>
+<img src="/static/images/logo.png" height="100" width="540">
+</center>
+<br>
+<table align="center" width="540" cellspacing="2" cellpadding="4" border="5" bgcolor="cyan">
+<caption><b>SLOT TIME TABLE - JEEVAPRIYA (212222220018)</b></caption>
+<tr align="center">
+<th bgcolor="yellow">Day/Time</th>
+<th bgcolor="yellow">Monday</th>
+<th bgcolor="yellow">Tuesday</th>
+<th bgcolor="yellow">Wednesday</th>
+<th bgcolor="yellow">Thursday</th>
+<th bgcolor="yellow">Friday</th>
+</tr>
+<tr align="center">
+<th bgcolor="yellow">8-10</th>
+<td colspan="3">FREE SLOT</td>
+<td>PY</td>
+<td>CN</td>
+</tr>
+<tr align="center">
+<th bgcolor="yellow">10-12</th>
+<td>SS</td>
+<td> FREE SLOT </td>
+<td>FWAD</td>
+<td>FWAD</td>
+<td>CA</td>
+</tr>
+<tr>
+<th bgcolor="yellow">12-1</th>
+<td colspan="5" align="center">L U N C H</td>
+</tr>
+<tr align="center">
+<th bgcolor="yellow">1-3</th>
+<td colspan="2"> FREE SLOT </td>
+<td>MAT</td>
+<td>T.ENG</td>
+<td>SS</td>
+</tr>
+<tr align="center">
+<th bgcolor="yellow">3-5</th>
+<td colspan="2"> FREE SLOT </td>
+<td>SS</td>
+<td>CN</td>
+<td>FWAD</td>
+</tr>
+</table>
+<br>
+<table align="center" cellspacing="2" cellpadding="4" border="2">
+<tr align="center">
+<th>S. No.</th>
+<th>Subject Code</th>
+<th>Subject Name</th>
+</tr>
+<tr>
+<td align="center">1.</td>
+<td align="center">19AI414</td>
+<td>Fundamentals of Web Application Development (FWAD)</td>
+</tr>
+<tr>
+<td align="center">2.</td>
+<td align="center">19EN101</td>
+<td>Technical English (T.ENG)</td>
+</tr>
+<tr>
+<td align="center">3.</td>
+<td align="center">19MA206</td>
+<td>Logics & Cominatorics(MAT)</td>
+</tr>
+<tr>
+<td align="center">4.</td>
+<td align="center">19CS321</td>
+<td>Computer Networks (CN)</td>
+</tr>
+<tr>
+<td align="center">5.</td>
+<td align="center">19CS202</td>
+<td>Computer Architecture(CA)</td>
+</tr>
+<tr>
+<td align="center">6.</td>
+<td align="center">19EY701</td>
+<td>Soft Skills (SS)</td>
+</tr>
+</table>
+</body>
 </html>
-    
